--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Rotating Navigation</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
-    <script src="script.js"></script>
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="close">
+            <i class="fas fa-times"></i>
+          </button>
+          <button id="open">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="content">
+        <h1>Amazing Article</h1>
+        <small>Floran Pop</small>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, doloremque facere accusantium, tempora consequatur molestiae earum exercitationem nobis asperiores quaerat harum veniam ipsa voluptatibus error ad ut eaque dolorum distinctio quam natus? Exercitationem sapiente fuga cupiditate autem? Ad, soluta quos voluptates consectetur natus beatae quas dolorem ullam laborum sequi, earum culpa unde nihil tempora voluptatem quasi architecto provident tempore molestiae corrupti ipsa distinctio adipisci quis! Modi doloremque optio, fuga sapiente quo et nesciunt corporis dicta explicabo sit alias vero natus error, voluptatem saepe omnis repellendus, eos reprehenderit laboriosam! Provident velit maiores consectetur ut, nihil quisquam. Dolor cum aperiam quibusdam officiis.</p>
+        
+        <h3>My Dog</h3>
+        <img src="https://unsplash.com/photos/T-0EW-SEbsE/download?ixid=MnwxMjA3fDB8MXxzZWFyY2h8MjB8fGRvZ3xlbnwwfHx8fDE2NTk0MTQyNTg&force=true&w=1920" alt="dogs">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius nihil maiores laudantium neque perspiciatis consequuntur quibusdam impedit eos modi enim autem, quae architecto possimus qui harum repellendus repellat ex eligendi doloremque nulla similique ad eum ullam suscipit. Incidunt nisi necessitatibus dignissimos ducimus beatae, laudantium praesentium autem. Perspiciatis odit fuga harum expedita tempora. Deserunt reprehenderit amet et! Possimus error cupiditate facere culpa dolor, perspiciatis soluta quasi velit magnam amet illo, dolore illum, commodi earum itaque assumenda?</p>
+      </div>
+    </div>
+
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i>Home</li>
+        <li><i class="fas fa-user-alt"></i>About</li>
+        <li><i class="fas fa-envelope"></i>Contact</li>
+      </ul>
+    </nav>
+    <script src="app/js/script.js"></script>
   </body>
 </html>
